Correction to learning on mobile site

--- a/Resources/Css/style.css
+++ b/Resources/Css/style.css
@@ -256,6 +256,8 @@ h3{
 
     .btn{
         margin-top: 1.5rem;
+        color: #d8d8d8;
+        background-color: #c0c0c0;
     }
 
     .banner-txt h3{
@@ -295,12 +297,10 @@ h3{
  .learn h2{
     padding-bottom: 1rem;
  }
-
- .course h3{
-    background-color: #d8d8d8;
-    padding: 1rem 0 1.5rem 1rem;
-    margin-bottom: 0.5rem;
-
+ 
+ .course{
+     background-color: #d8d8d8;
+     padding: 1rem 0 1.5rem 1rem;
  }
 
 
